--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hardhat-contract-sizer",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "license": "MIT",
   "description": "Output Solidity contract sizes with Hardhat",
   "keywords": [
@@ -18,6 +18,7 @@
   "repository": "https://github.com/ItsNickBarry/hardhat-contract-sizer",
   "author": "Nick Barry",
   "main": "index.js",
+  "types": "index.d.ts",
   "peerDependencies": {
     "hardhat": "^2.0.0"
   },
