fix: correct order of line

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bahuy3103/hardhat-contract-sizer",
+  "name": "hardhat-contract-sizer",
   "version": "2.10.0",
   "license": "MIT",
   "description": "Output Solidity contract sizes with Hardhat",
@@ -15,10 +15,7 @@
     "wow",
     "bytecode"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/huyhuynh3103/hardhat-contract-sizer.git"
-  },
+  "repository": "https://github.com/ItsNickBarry/hardhat-contract-sizer",
   "author": "Nick Barry",
   "main": "index.js",
   "types": "index.d.ts",
@@ -33,12 +30,5 @@
     "chalk": "^4.0.0",
     "cli-table3": "^0.6.0",
     "strip-ansi": "^6.0.0"
-  },
-  "bugs": {
-    "url": "https://github.com/huyhuynh3103/hardhat-contract-sizer/issues"
-  },
-  "homepage": "https://github.com/huyhuynh3103/hardhat-contract-sizer#readme",
-  "scripts": {
-    "test": "mocha"
   }
 }
