--- a/package.json
+++ b/package.json
@@ -19,12 +19,20 @@
   "author": "Nick Barry",
   "main": "index.js",
   "types": "index.d.ts",
+  "scripts": {
+    "prepare": "husky",
+    "prettier": "prettier --write ."
+  },
   "peerDependencies": {
     "hardhat": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.6.0",
-    "hardhat": "^2.0.0"
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "hardhat": "^2.0.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2",
+    "prettier-plugin-solidity": "^1.3.1"
   },
   "dependencies": {
     "chalk": "^4.0.0",
