--- a/package.json
+++ b/package.json
@@ -17,22 +17,31 @@
   ],
   "repository": "https://github.com/ItsNickBarry/hardhat-contract-sizer",
   "author": "Nick Barry",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
+    "build": "tsc --build",
     "prepare": "husky",
     "prettier": "prettier --write ."
   },
+  "files": [
+    "dist/src/",
+    "src/"
+  ],
   "peerDependencies": {
     "hardhat": "^2.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.14.7",
     "hardhat": "^2.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
-    "prettier-plugin-solidity": "^1.3.1"
+    "prettier-plugin-solidity": "^1.3.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2"
   },
   "dependencies": {
     "chalk": "^4.0.0",
